--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="./recipes/chili.html">New Mexican Green Chili</a>
+        <ul>
+           <li><a href="./recipes/chili.html">New Mexican Green Chili</a></li> 
+           <li><a href="./recipes/tortillas.html">Flour Tortillas</a></li>
+        </ul>
     </body>
 </html>
