--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Popular Southern Colorado Recipes</h1>
         <ul>
            <li><a href="./recipes/chili.html">New Mexican Green Chili</a></li> 
            <li><a href="./recipes/tortillas.html">Flour Tortillas</a></li>
