changed chili title

--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>New Nexican Green Chili</title>
+        <title>Pork Green Chili</title>
     </head>
     <body>
-        <h1>New Mexican Green Chili</h1>
+        <h1>Pork Green Chili</h1>
     
         <img src="images/chili.jpg" alt="Green Chili in a Pot" width="350" height="450">
-        <h3>Hatch Pork Green Chili</h3>
+        <h3>Pork Green Chili</h3>
             <p>
                 When I was young, green chili was on the dinner table at least once or twice
                 a week. With a short ingredient list, including cubed pork shoulder, 
