--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Popular Southern Colorado Recipes</h1>
         <ul>
-           <li><a href="./recipes/chili.html">New Mexican Green Chili</a></li> 
+           <li><a href="./recipes/chili.html">Green Chili</a></li> 
            <li><a href="./recipes/tortillas.html">Flour Tortillas</a></li>
         </ul>
     </body>
