--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
            <li><a href="./recipes/chili.html">Green Chili</a></li> 
            <li><a href="./recipes/tortillas.html">Flour Tortillas</a></li>
+           <li><a href="./recipes/burrito.html">Smothered Burritos</a></li>
         </ul>
     </body>
 </html>
