--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Popular Southern Colorado Recipes</h1>
+        <img src="recipes/images/colorado.jpg" alt="Colorado Welcome Sign" width="350" height="250">
+
         <ul>
            <li><a href="./recipes/chili.html">Green Chili</a></li> 
            <li><a href="./recipes/tortillas.html">Flour Tortillas</a></li>
