--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -62,6 +62,7 @@
                      <li>Taste your broth and add salt and pepper to your liking.
                      </li>
                  </ol>
+                 <a href="../index.html">Back to main recipe page</a>
             </p>
     </body>
 </html>
