--- a/recipes/tortillas.html
+++ b/recipes/tortillas.html
@@ -49,6 +49,7 @@
                        <li> Place the finished tortilla on a plate lined with a clean dish towel. Continue with the
                            rest of the dough. Enjoy!</li>
                    </ol>
+                   <a href="../index.html">Back to main recipe page</a>
             </p>
     </body>
 </html>
