Add style changes to all html files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <title>Recipes</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="recipes/style.css">
     </head>
     <body>
-        <h1>Popular Southern Colorado Recipes</h1>
+        <div class="header">Popular Southern Colorado Recipes</div>
         <img src="recipes/images/colorado.jpg" alt="Colorado Welcome Sign" width="350" height="250">
 
         <ul>
