--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTC-8">
         <title>Smothered Burrito</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Green Chili Smothered Burrito</h1>
+        <div class="header">Green Chili Smothered Burrito</div>
 
         <img src="images/burrito.jpg" alt="Green Chili Smothered Burrito" width="350" height="450">
-        <h3>Smothered Burrito</h3>
+        <div class="caption">Smothered Burrito</div>
 
         <p>
             Homemade green chili is wonderful over a beef and bean burrito. The warm, smokey green chili
             adds a depth to a simple burrito. Add shredded lettuce, tomatoes, and sour cream and you have
             a crowd pleaser. 
 
-            <h1>Ingredients</h1>
+            <div class="ingredients">Ingredients</div>
             <ul>
                 <li>1 batch <a href="chili.html">Green Chili</a></li>
                 <li>4 burrito sized tortillas- <a href="tortillas.html">fresh</a> or store bought</li>
@@ -36,7 +37,7 @@
                 <li>sour cream, hot sauce, and/or salsa for garnish</li>
             </ul>
 
-            <h2>Steps</h2>
+            <div class="steps">Steps</div>
             <ol>
                 <li>Brown ground beef at medium heat. Add salt, pepper, cumin, garlic powder, onion powder, and chili powder.
                     Add 1/2 cup water, cover and simmer at low/medium heat until the water has evaporated.
