--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Pork Green Chili</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Pork Green Chili</h1>
+        <div class="header">Pork Green Chili</div>
     
         <img src="images/chili.jpg" alt="Green Chili in a Pot" width="350" height="450">
-        <h3>Pork Green Chili</h3>
+        <div class="caption">Pork Green Chili</div>
             <p>
                 When I was young, green chili was on the dinner table at least once or twice
                 a week. With a short ingredient list, including cubed pork shoulder, 
                 roasted Hatch or Pueblo green chilis, this warm, hearty meal is an 
                 easy weeknight dinner. Pair with fresh flour tortillas for a full meal.
                 
-                <h1>Ingredients</h1>
+                <div class="ingredients">Ingredients</div>
 
                 <ul>
                     <li>2lbs pork shoulder- cubed</li>
@@ -29,7 +30,7 @@
                     <li>salt and pepper to taste</li>
                  </ul>
 
-                 <h2>Steps</h2>
+                 <div class="steps">Steps</div>
 
                  <ol>
                      <li>Preheat the oven or broiler to 475 degrees and line a sheet pan with tin foil.
