--- a/recipes/tortillas.html
+++ b/recipes/tortillas.html
@@ -3,13 +3,14 @@
     <head>
         <title>Flour Tortillas</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Flour Tortillas</h1>
+        <div class="header">Flour Tortillas</div>
 
         <img src="images/tortillas.jpg" alt="Fresh Flour Tortillas" width="350" height="250">
-        <h3>Flour Tortillas</h3>
+        <div class="caption">Flour Tortillas</div>
             <p>
                 There is nothing better than a fresh, hot, flour tortillas straight
                 off the comal. With ingredients you likely have in your pantry
@@ -23,13 +24,13 @@
                         <li>4 tablespoons lard or crisco</li>
                         <li>1.5-2 cups hot water</li>
                     </ul>
-                   <h2>Steps</h2> 
+                   <div class="steps">Steps</div> 
 
                    <ol>
                        <li>Whisk flour, salt and baking powder in a medium-large bowl.</li>
                        <li>Measure out lard or crisco, add to the flour mixture, and incorporate
                            into the flour either by hand or with a fork. You're looking for a biscuit
-                           dough consitency.
+                           dough consistency.
                        </li>
                        <li>Add 1.5 cups of hot water and mix until the dough is rough
                            in texture. It should be fairly sticky but not so sticky it
