Fix typo on tortilla.html

--- a/recipes/tortillas.html
+++ b/recipes/tortillas.html
@@ -15,7 +15,7 @@
                 There is nothing better than a fresh, hot, flour tortillas straight
                 off the comal. With ingredients you likely have in your pantry
                 you can enjoy fresh tortillas in less than an hour!
-                    <h1>Ingredients</h1>
+                    <div class="ingredients">Ingredients</div>
 
                     <ul>
                         <li>4 cups all purpose flour</li>
